# CppSpaceInvaders

./: .gitignore  CMakeLists.txt  Readme.md  Transform.h  d  d.sh  f.py  fix.py  g.py  mkdir.sh  r  r.py
Entity/: Barrier.cpp  Barrier.h  Bullet.h  Enemy.h  Player.h  UFO.h
Shaders/: PixelShader.hlsl  VertexShader.hlsl
include/: Barrier.h  Bullet.h  Enemy.h  Game.h  Player.h  TextRenderer.h  UFO.h
src/: Game.cpp  Graphics.cpp  Graphics.h  TextRenderer.cpp  Transform.cpp  main.cpp
src/Entity/: Barrier.cpp  Bullet.cpp  Enemy.cpp  Player.cpp  UFO.cpp
